# StickSlip

./: Makefile.am  navier_stokes_sing_face_element.h  power_method.h  two_d_stick_slip_with_face_element.cc  unstructured_stick_slip_mesh.h
